--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/JulianoPadilha/node-typescript-tdd-clean-arch-solid/issues"
   },
-  "homepage": "https://github.com/JulianoPadilha/node-typescript-tdd-clean-arch-solid#readme"
+  "homepage": "https://github.com/JulianoPadilha/node-typescript-tdd-clean-arch-solid#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "git-commit-msg-linter": "^3.0.0"
+  }
 }
