--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/JulianoPadilha/node-typescript-tdd-clean-arch-solid#readme",
   "dependencies": {},
   "devDependencies": {
-    "git-commit-msg-linter": "^3.0.0"
+    "@types/node": "^14.14.10",
+    "git-commit-msg-linter": "^3.0.0",
+    "typescript": "^4.1.2"
   }
 }
