--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Curso de NodeJS, Typescript, TDD, Clean Arch e SOLID da Udemy.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/JulianoPadilha/node-typescript-tdd-clean-arch-solid#readme",
   "dependencies": {},
   "devDependencies": {
+    "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "eslint": "^7.14.0",
@@ -29,7 +30,9 @@
     "eslint-plugin-standard": "^4.1.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.2",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.2"
   }
 }
