--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,12 @@
 {
   "extends": "standard-with-typescript",
-  "parseOptions": {
+  "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
     "@typescript-eslint/comma-spacing": "off",
     "@typescript-eslint/method-signature-style": "off",
-    "@typescript-eslint/return-await": "off"
+    "@typescript-eslint/return-await": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
