--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Curso de NodeJS, Typescript, TDD, Clean Arch e SOLID da Udemy.",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:staged": "jest"
+    "test": "jest --passWithNoTests --watch",
+    "test:staged": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
