--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "url": "https://github.com/JulianoPadilha/node-typescript-tdd-clean-arch-solid/issues"
   },
   "homepage": "https://github.com/JulianoPadilha/node-typescript-tdd-clean-arch-solid#readme",
-  "dependencies": {},
+  "dependencies": {
+    "validator": "^13.5.2"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.16",
     "@types/node": "^14.14.10",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "eslint": "^7.14.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
